# NLP

./: .env.example  .gitignore  CLAUDE.md  GSM8K_FINAL_COMPARISON.csv  GSM8K_FINAL_COMPARISON.md  OPENAI_USAGE.md  README.md  README_CHAT.md  TODO.md  analyze_incremental_prediction.py  baseline_mae.py  better_metrics.py  chat.py  compare_all_hbbops.py  compare_grid_sizes.py  compare_hbbops.py  convert_json_to_arrow.py  convert_tos_to_local.py  create_embeddings.py  demo_tos_classification.py  evaluate_best_prompt.py  evaluate_claudette.py  evaluate_gsm8k.py  evaluate_opro_best.py  evaluate_opro_manual.py  incremental_prediction_results.csv  lipo.html  load_tos_dataset.py  load_tos_simple.py  main.py  pyproject.toml  recommendations.md  rielbo_presentation.html  run_all_optimizers_50k.sh  run_claudette_classifier.sh  run_dual_gpu.sh  run_gepa.py  run_opro.py  run_opro_gpu1.py  run_opro_gpu1.sh  (+8 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
baseline_opro/: __init__.py  config.py  run_baseline.py
bolt/: PIPELINE.md  __init__.py  config.py  encoder.py  generate_training_data.py  gp.py  hyperband.py  inference.py  run.py  set_transformer.py  training.py
claudette_classifier/: README.md  __init__.py  config.py  data_loader.py  encoder.py  evaluate.py  hyperparameter_tuning.py  inference.py  loss.py  main.py  model.py  run_dual_gpu.sh  run_hyperparameter_tuning.sh  train.py
datasets/: claudette_test.json  claudette_validation.json
ecoflow/: PIPELINE.md  __init__.py  decoder.py  flow_model.py  gp_surrogate.py  guided_flow.py  latent_bo.py  optimization_loop.py  run.py  run_bo_full.py  run_latent_bo.py  train_flow.py  validate.py
ecoflow_bo/: __init__.py  cfm_decoder.py  config.py  cycle_consistency.py  data.py  density_acquisition.py  detail_retriever.py  encoder.py  latent_gp.py  losses.py  optimizer.py  perceiver_decoder.py  pipeline.md  train_manifold.py  train_perceiver.py  velocity_network.py
flowpo_hd/: ARCHITECTURE_PROPOSAL.md  FINDINGS.md  PIPELINE.md  __init__.py  beta_gp.py  config.py  flow_dit.py  flow_guided_acquisition.py  improved_gp.py  manifold_keeper.py  saas_gp.py  turbo_1024.py  utils.py  warm_start.py
generative_hbbops/: __init__.py  config.py  encoder.py  gp_model.py  hylo.py  inverter.py  optimizer.py  run_optimized.py
generative_hbbops_2/: __init__.py  config.py  encoder.py  gp_model.py  hylo2.py  optimizer.py  run_hylo2.py  visualizer.py
gepa/: __init__.py  gepa.py  run.py
gepa_gsm8k/: __init__.py  run.py
hbbops/: README.md  REFACTORING_SUMMARY.md  debug_extraction.py  evaluate_full_grid.py  evaluate_predictions.py  examples.txt  hbbops.py  instructions.txt  instructions_selected.txt  prompt_inverse.py  run_hbbops.py  visualize_split.py
hbbops_improved/: README.md  hbbops.py  run_hbbops.py
hbbops_improved_2/: hbbops.py  instructions_uniform.txt
hbbops_improved_3/: __init__.py  gp_model.py  hbbops.py  noise_estimation.py  run_hbbops.py
hbbops_improved_4/: __init__.py  data  (+3 more)
(+892 files in other folders)
