[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<3.14"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.71.0",
    "bokeh>=3.4.3",
    "catboost>=1.2.0",
    "datasets>=4.2.0",
    "google-generativeai>=0.8.5",
    "gpytorch>=1.13",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "ngboost>=0.5.1",
    "numpy>=1.21.0",
    "openai>=2.5.0",
    "optuna>=4.1.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.3.0",
    "setuptools>=65.0.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.57.1",
    "umap-learn>=0.5.5",
    "vec2text>=0.0.13",
    "vllm>=0.10.0,<0.11.0",
]
