[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<3.14"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.71.0",
    "bokeh>=3.4.3",
    "botorch>=0.14.0",
    "catboost>=1.2.0",
    "datasets>=4.2.0",
    "gpytorch>=1.14.2",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "ngboost>=0.5.1",
    "numpy>=1.21.0",
    "openai>=2.5.0",
    "optuna>=4.1.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.3.0",
    "setuptools>=65.0.0",
    "torch>=2.0.0",
    "torchdyn>=1.0.6",
    "tqdm>=4.65.0",
    "transformers>=4.57.1",
    "umap-learn>=0.5.5",
    "vec2text>=0.0.13",
    "vllm>=0.10.0,<0.11.0",
    "sonar-space>=0.5.0",
    # Soft-Prompt VAE dependencies
    "peft>=0.14.0", # LoRA adapters
    "datasketch>=1.6.0", # MinHash deduplication
    "fasttext-wheel>=0.9.2", # Language detection
    "torchmetrics>=1.0.0", # BLEU/ROUGE metrics
    "tensorboard>=2.20.0",
    "torch-optimizer>=0.3.0",
    # EcoFlow-BO dependencies
    "torchcfm>=1.0.4",  # Conditional Flow Matching
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
