[project]
name = "nlp"
version = "0.3.0"
description = "Prompt optimization (OPRO, ProTeGi, GEPA) and molecular optimization (RieLBO Subspace BO)"
requires-python = ">=3.10,<3.14"
dependencies = [
    # Core
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "setuptools>=65.0.0",
    # LLM clients
    "anthropic>=0.71.0",
    "openai>=2.5.0",
    "vllm>=0.10.0,<0.11.0",
    "transformers>=4.57.1",
    # Bayesian Optimization
    "botorch>=0.14.0",
    "gpytorch>=1.14.2",
    # GSM8K evaluation
    "datasets>=4.2.0",
    # GuacaMol molecular optimization
    "rdkit>=2022.3.1",
    "guacamol>=0.5.0",
    "selfies==2.0.0",
    "networkx>=3.0",
    # Data analysis and plotting
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "cma>=4.4.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
